# animesaturn-adblock

./: README.md  animesaturn_filters.txt  pyproject.toml
.github/workflows/: update_filters.yml
scripts/: update_filters.py
templates/: animesaturn_filters.txt.template
