[tool.poetry]
name = "animesaturn-adblock"
version = "0.1.0"
description = ""
authors = ["Luca Salvarani <lucasalvarani99@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.12.0"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
